<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:id="@+id/lottoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ImageView
        android:id="@+id/lottoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lottoLabel"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/lotto_image"
        android:cropToPadding="false"
        android:padding="10dp"
        android:src="@drawable/lotto"/>

    <TextView
        android:id="@+id/numbersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lottoImage"
        android:layout_centerHorizontal="true"
        android:padding="2dp"
        android:textSize="13sp"/>

    <EditText
        android:id="@+id/howManyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numbersLabel"
        android:layout_centerHorizontal="true"
        android:ems="5"
        android:inputType="number"
        android:text="@string/how_many"/>

    <TextView
        android:id="@+id/how_many_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numbersLabel"
        android:layout_centerHorizontal="true"
        android:layout_toStartOf="@id/howManyEditText"
        android:paddingTop="7dp"
        android:text="How Many "
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/input_how_many_validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/howManyEditText"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/maxEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_how_many_validation"
        android:layout_centerHorizontal="true"
        android:ems="5"
        android:inputType="number"
        android:text="@string/max"/>

    <TextView
        android:id="@+id/max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_how_many_validation"
        android:layout_centerHorizontal="true"
        android:layout_toStartOf="@id/maxEditText"
        android:paddingTop="7dp"
        android:text="Max "
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/input_max_validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maxEditText"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/pickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_max_validation"
        android:layout_centerHorizontal="true"
        android:text="@string/pick_button"/>

    <View
        android:id="@+id/line_break"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/pickButton"
        android:layout_margin="10dp"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/picksTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_break"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</RelativeLayout>
